# mipt_data_science

./: README.md  pyproject.toml
course1/week2/: task1.py  task2.py
course1/week3/: README.md  task1.py  task2.py  task3.py
course1/week4/: README.md  task.py
course2/week1/: task.py  task2.py
