[tool.poetry]
name = "study"
version = "0.1.0"
description = ""
authors = ["Michael Gurbanov <MYGurbanov@sberbank.ru>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.1"
scipy = "^1.7.3"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
